--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Libereco Mono
-subtitle: A collection of writings about Monero and it's impact on privacy rights in the information age. New to Monero? Check out the Resources link above to learn more.
+subtitle: A collection of writings about Monero and it's importance in the information age. 
 ---
