--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Libereco Mono
-subtitle: A collection of writings about Monero and it's importance in the information age. 
+subtitle: A collection of writings about Monero and digital privacy. 
 ---
