--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ layout: home
 title: Libereco Mono
 subtitle: A collection of writings about Monero and digital privacy. 
 ---
+<a href:"https://douglasmcsqueaky.github.io/feed.xml"</a>
