--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: home
 title: Libereco Mono
 subtitle: A collection of writings about Monero and digital privacy. 
 ---
-<small>RSS feed: https://douglasmcsqueaky.github.io/feed.xml</small>
+<center><small>RSS feed: https://douglasmcsqueaky.github.io/feed.xml</center></small>
